--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="ba-container">
         <div class="ba-header">
           <h1 class="ba-header__logo">
-            Bhromaon
+            <a href="#">Bhromaon</a>
           </h1>
           <!-- /.ba-header__logo -->
           <nav>
@@ -81,9 +81,11 @@
 				                  Ddislike men who are so beguiled and demoralized by the charms
 				                  of pleasure of the moment, so blinded by desire, that.
 				                </p>
-			  </article>
+			  </article> 
               <div class="ba-buttons">
-                Explore Places
+                <p>
+                  Explore Places
+                </p>
               </div>
             </div>
             <!-- /.ba-button -->
@@ -110,7 +112,7 @@
               <h1 class="ba-intro__heding">Search Places</h1>
             </div>
             <div class="ba-col-4">
-              <img src="img/checed.png" alt="checed" />
+              <img class="checked" src="img/checed.png" alt="checed" />
               <h1 class="ba-intro__heding">Search Places</h1>
             </div>
             <div class="ba-col-4">
@@ -140,7 +142,9 @@
 				                </p>
 			  </article>
               <div class="ba-buttons">
-                Book Now
+                <p>
+                  Book Now
+                </p>
               </div>
             </div>
           </div>
@@ -166,7 +170,9 @@
 	  					  </p>
 					  </article>
 					  <div class="ba-buttons">
-						Book Now
+						<p>
+              Book Now
+            </p>
 					  </div>
 					</div>
 				  </div>
@@ -204,10 +210,10 @@
 				</p>
 				<div class="ba-socials">
 					<a href="https://www.facebook.com/"><svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg></a>
-					<a href="#"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
-					<a href="#"><svg class="icon icon-linkedin2"><use xlink:href="#icon-linkedin2"></use></svg></a>
-					<a href="#"><svg class="icon icon-youtube"><use xlink:href="#icon-youtube"></use></svg></a>
-					<a href="#"><svg class="icon icon-pinterest"><use xlink:href="#icon-pinterest"></use></svg></a>
+					<a href="https://twitter.com/"><svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg></a>
+					<a href="https://www.linkedin.com/"><svg class="icon icon-linkedin2"><use xlink:href="#icon-linkedin2"></use></svg></a>
+					<a href="https://www.youtube.com/?gl=UA"><svg class="icon icon-youtube"><use xlink:href="#icon-youtube"></use></svg></a>
+					<a href="https://www.pinterest.com/"><svg class="icon icon-pinterest"><use xlink:href="#icon-pinterest"></use></svg></a>
 				</div>
 			</div>
 		</div>
